<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackerThanDark"
    android:minHeight="48dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/play_top_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/top_txt_example"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:cardCornerRadius="20dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="448dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/play_txt_pref"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/example_txt_start"
                            android:textAlignment="viewStart"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </ScrollView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/play_btn_maintain"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="88dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/SomewherePlaceToPlace"
                            android:text="@string/maintenance" />

                        <Button
                            android:id="@+id/play_btn_social"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="94dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/SomewherePlaceToPlace"
                            android:text="@string/socialize" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/play_btn_radar"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/SomewherePlaceToPlace"
                            android:text="@string/radar" />

                        <Button
                            android:id="@+id/play_btn_report"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/SomewherePlaceToPlace"
                            android:text="@string/report" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/play_btn_back"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:minHeight="48dp"
                android:text="@string/back_to_menu"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>